@@ -1,3 +1,9 @@
+2004-05-19  Stefan Jahn  <stefan@lkcc.org>
+
+	* diagrams/tabdiagram.cpp (calcDiagram): Yet another bug fix
+	causing segfaulting the tabdiagram when an graph input has 
+	disappered after a new simulation.
+
 2004-05-19  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>
 
 	* diagrams/rectdiagram.cpp (calcDiagram): Fixed an endless
